--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.6.0
+  shared_preferences: ^2.5.3
+
+cupertino_icons: ^1.0.2
+http: ^0.13.4
+shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
